# uv_ruff_ty_docker_template

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  ruff.toml
src/: main.py
