[project]
name = "uv-ruff-ty-docker-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "coverage==6.4.4",
    "pytest==7.1.3",
    "pytest-cov==3.0.0",
    "pytest-env==0.6.2",
    "pytest-html==3.1.1",
    "pytest-mock==3.8.2",
    "pytest-xdist==2.5.0",
    "ruff>=0.11.9",
    "ty>=0.0.1a1",
]
